--- a/source/sass/blocks/header/main-header.scss
+++ b/source/sass/blocks/header/main-header.scss
@@ -2,5 +2,11 @@
 
     &__container{
       justify-content: space-between;
+      padding: 10px 0 15px;
+      align-items: center;
+    }
+
+    &__logo{
+      display: block;
     }
 }
