--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,10 +1,12 @@
 @use "./page.scss";
 @use "./fonts.scss";
 @use "./visually-hidden.scss";
-
 @use "./container.scss";
 
 
 @use "./blocks/header/main-header.scss";
 @use "./blocks/header/container-content.scss";
+@use "./blocks/header/main-nav.scss";
 @use "./blocks/header/site-list.scss";
+
+@use "./blocks/main/search-form.scss";
