--- a/source/sass/blocks/header/main-header.scss
+++ b/source/sass/blocks/header/main-header.scss
@@ -1,6 +1,8 @@
 .main-header{
 
-    &__container{
+    &__wrapper{
+      display: flex;
+      flex-wrap: wrap;
       justify-content: space-between;
       padding: 10px 0 15px;
       align-items: center;
