--- a/source/sass/blocks/main/search-form.scss
+++ b/source/sass/blocks/main/search-form.scss
@@ -1,14 +1,31 @@
 .search-form{
 
-  background-image: url("img/index-background-desktop.png");
+  background-image: linear-gradient(rgba(104, 183, 56, 0.85),
+                                    rgba(104, 183, 56, 0.85)),
+                    url(../img/index-background-desktop.png);
+  background-repeat: no-repeat;
 
     &__title{
       text-align: center;
       color: #FFFFFF;
+      padding-top: 27px;
+
     }
 
     &__subtitle{
       text-align: center;
       color: #FFFFFF;
+      margin: 0 auto;
+      padding: 25px 0 29px;
+      text-transform: uppercase;
+      line-height: 14px;
+    }
+
+    &__button {
+      padding: 11px 44px;
+      font-size: 14px;
+      line-height: 18px;
+      display: block;
+      margin-bottom: 20px;
     }
 }
