--- a/source/sass/page.scss
+++ b/source/sass/page.scss
@@ -1,14 +1,26 @@
 .page{
   height: 100%;
+  background-color: #EBEBEB;
+
 
     &__body{
       font-family: "Oswald", "Arial", sans-serif;
       font-size: 14px;
       line-height: 18px;
       font-weight: 400;
+      padding: 0;
       margin: 0 auto;
+      width: 320px;
       min-height: 100%;
       color: #000000;
-      background-color: #EBEBEB;
+      display: flex;
+    flex-direction: column;
+    background-color: #FFFFFF;
     }
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
