закончил стилизацию всех страниц мобильной версии

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -26,6 +26,10 @@
 @use "./blocks/main/extra-goods-item.scss";
 @use "./blocks/main/special-offer.scss";
 @use "./blocks/main/form.scss";
+@use "./blocks/main/program-type.scss";
+@use "./blocks/main/form-contact.scss";
+@use "./blocks/main/form-comment.scss";
+@use "./blocks/main/form-additionally.scss";
 
 @use "./blocks/footer/main-footer.scss";
 @use "./blocks/footer/social-list.scss";
