--- a/source/sass/blocks/main/form.scss
+++ b/source/sass/blocks/main/form.scss
@@ -17,10 +17,16 @@
       padding-bottom: 39px;
     }
 
+    &__program-selection{
+      display: flex;
+      flex-direction: column;
+    }
+
     &__group{
       border: none;
       margin: 0;
       padding: 0 0 11px;
+      display: block;
     }
 
     &__item{
@@ -33,15 +39,8 @@
       font-size: 16px;
       color: #444444;
       text-transform: uppercase;
-
       align-self: center;
     }
-
-    // &__item-wrapper{
-    //   display: flex;
-    //   flex-grow: 1;
-
-    // }
 
     &__item-text{
       flex-grow: 1;
@@ -50,7 +49,14 @@
       line-height: 18px;
       color: #444444;
       text-transform: uppercase;
-      border: 1px solid #E7E7E7;
+      border: none;
+      outline: 1px solid #E7E7E7;
       padding: 12px 0 13px 15px;
+    }
+
+    &__required-fields-text{
+      text-align: center;
+      margin: 0;
+      padding: 21px 0 32px;
     }
 }
