--- a/source/sass/blocks/main/extra-goods-item.scss
+++ b/source/sass/blocks/main/extra-goods-item.scss
@@ -2,31 +2,31 @@
   display: flex;
   flex-direction: column;
   margin: 0;
+}
 
-    &__title{
-      margin: 0;
-      padding: 13px 0;
-      font-size: 16px;
-      line-height: 16px;
-      font-weight: 400;
-      text-transform: uppercase;
-      color: #222222;
-    }
+.extra-goods-item__title{
+  margin: 0;
+  padding: 13px 0;
+  font-size: 16px;
+  line-height: 16px;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: $special-dark-gray-2;
+}
 
-    &__description{
-      margin: 0;
-      display: flex;
-      justify-content: space-between;
-      padding-bottom: 15px;
-      font-family: Arial;
-      line-height: 14px;
-    }
+.extra-goods-item__description{
+  margin: 0;
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 15px;
+  font-family: Arial;
+  line-height: 14px;
+}
 
-    &__value{
-      margin-left: auto;
-    }
+.extra-goods-item__value{
+  margin-left: auto;
+}
 
-    &__button{
-      margin-bottom: 19px;
-    }
+.extra-goods-item__button{
+  margin-bottom: 19px;
 }
