--- a/source/sass/blocks/main/form-comment.scss
+++ b/source/sass/blocks/main/form-comment.scss
@@ -1,21 +1,35 @@
 .form-comment{
 
-    &__title{
-      font-weight: 400;
-      font-size: 24px;
-      line-height: 26px;
-      padding-bottom: 38px;
-    }
+}
 
-    &__message{
-      font: inherit;
-      font-size: 16px;
-      text-transform: uppercase;
-      color: #444444;
-      padding: 9px 12px 0 15px;
-      border: none;
-      outline: 1px solid #E7E7E7;
-      width: 100%;
-      resize: none;
+.form-comment__title{
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 26px;
+  padding-bottom: 38px;
+  width: 100%;
+  position: relative;
+
+    &::after{
+      position: absolute;
+      content: "";
+      display: block;
+      background-color: $basic-green;
+      width: 158px;
+      height: 2px;
+      right: -20px;
+      top: 15px;
     }
+}
+
+.form-comment__message{
+  font: inherit;
+  font-size: 16px;
+  text-transform: uppercase;
+  color: $special-dark-gray;
+  padding: 9px 12px 0 15px;
+  border: none;
+  outline: 1px solid $basic-gray-4;
+  width: 100%;
+  resize: none;
 }
