--- a/source/sass/blocks/section-title.scss
+++ b/source/sass/blocks/section-title.scss
@@ -4,3 +4,10 @@
   font-weight: 400;
   margin: 0;
 }
+
+@media (min-width: $tablet-width){
+  .section-title{
+    font-size: 60px;
+    line-height: 60px;
+  }
+}
