--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,14 +1,21 @@
 
-$white: #ffffff;
+$white: #FFFFFF;
 $basic-gray:  #F2F2F2;
 $basic-gray-2: #E5E5E5;
+$basic-gray-3: #EAEAEA;
+$basic-gray-4: #E7E7E7;
 $special-gray-2: #EBEBEB;
 $special-gray: #CDCDCD;
+$border-gray: #D9D9D9;
+$border-gray-2: #E6E6E6;
 $special-gray-3: #666666;
 $special-dark-gray: #444444;
-$specialDarkGray2: #222222;
+$special-dark-gray-2: #222222;
 $another-black: #111111;
 $black: #000000;
 $status-error: #FF8282;
-$basic-green: #68B738;
-$basic-green-2: #5EAA2F;
+$basic-green: #68b738;
+$basic-green-2: #5eaa2f;
+
+$tablet-width: 768px;
+$desktop-width: 1440px;
