--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -1,9 +1,9 @@
-.button{
-  color: #FFFFFF;
+.button {
+  color: $white;
   padding: 10px 0;
   text-transform: uppercase;
   text-align: center;
-  background-color: #68B738;
+  background-color: $basic-green;
   border: none;
   cursor: pointer;
   text-decoration: none;
@@ -11,9 +11,10 @@
   font-weight: inherit;
   font-size: 16px;
   line-height: 20px;
-}
 
-.button--gray{
-  background-color: #F2F2F2;
-  color: #444444;
+  &--gray {
+    background-color: $basic-gray;
+    color: $special-dark-gray;
+  }
+
 }
