--- a/source/sass/blocks/global/container-content.scss
+++ b/source/sass/blocks/global/container-content.scss
@@ -2,3 +2,17 @@
   width: 280px;
   margin: 0 20px;
 }
+
+@media (min-width: $tablet-width) {
+  .container-content {
+    margin: 0 30px;
+    width: auto;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .container-content {
+    margin: 0 110px;
+    width: auto;
+  }
+}
