--- a/source/sass/blocks/header/main-header.scss
+++ b/source/sass/blocks/header/main-header.scss
@@ -1,14 +1,26 @@
-.main-header{
+.main-header {
+  position: relative;
+}
 
-    &__wrapper{
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      padding: 10px 0 15px;
-      align-items: center;
-    }
+.main-header__wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 10px 0 15px;
+  align-items: center;
+}
 
-    &__logo{
-      display: block;
-    }
+.main-header__logo {
+  display: block;
+}
+
+@media (min-width: $tablet-width) {
+
+  .main-header {
+    position: static;
+  }
+
+  .main-header__wrapper{
+    padding: 24px 0;
+  }
 }
