--- a/source/sass/blocks/main/catalog.scss
+++ b/source/sass/blocks/main/catalog.scss
@@ -1,17 +1,18 @@
 .catalog{
 
-    &__list{
-      padding: 0;
-      margin: 0;
-      list-style-type: none;
-      display: grid;
-    }
+}
 
-    &__title{
-        padding-bottom: 40px;
-    }
+.catalog__list{
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+  display: grid;
+}
 
-    &__item{
-      padding: 20px 0 25px;
-    }
+.catalog__title{
+    padding-bottom: 40px;
+}
+
+.catalog__item{
+  padding: 20px 0 25px;
 }
