--- a/source/sass/blocks/main/cooperation.scss
+++ b/source/sass/blocks/main/cooperation.scss
@@ -1,34 +1,33 @@
 .cooperation{
-
-    &__wrapper{
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 2px;
-      padding: 26px 0;
-    }
-
-    &__title{
-      margin: 0;
-      font-size: 16px;
-      line-height: 20px;
-      font-weight: 400;
-      text-transform: uppercase;
-      width: 139px;
-    }
-
-    &__address{
-      margin: 0;
-      font-family: Arial;
-      line-height: 20px;
-      width: 139px;
-    }
-
-    &__map{
-      display: block;
-    }
+  &--gray{
+    background-color: $basic-gray;
+  }
 }
 
-
-.cooperation--gray{
-  background-color: #F2F2F2;;
+.cooperation__wrapper{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 2px;
+  padding: 26px 0;
 }
+
+.cooperation__title{
+  margin: 0;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 400;
+  text-transform: uppercase;
+  width: 139px;
+}
+
+.cooperation__address{
+  margin: 0;
+  font-family: "Arial";
+  line-height: 20px;
+  width: 139px;
+}
+
+.cooperation__map{
+  display: block;
+}
+
