--- a/source/sass/blocks/main/example.scss
+++ b/source/sass/blocks/main/example.scss
@@ -1,24 +1,23 @@
 .example{
-  background-color: #EAEAEA;
+  background-color: $basic-gray-3;
+}
 
+.example__title{
+  padding-top: 66px;
+  margin-bottom: 40px;
+}
 
-    &__title{
-      padding-top: 66px;
-      margin-bottom: 40px;
-    }
+.example__description{
+  font-family: "Arial";
+  color: $special-dark-gray;
+  margin: 0 0 20px 0;
+}
 
-    &__description{
-      font-family: Arial;
-      color: #444444;
-      margin: 0 0 20px 0;
-    }
+.example__stats{
+  margin: 0;
+}
 
-    &__stats{
-      margin: 0;
-    }
-
-    &__costs-amount{
-      margin: 0 0 20px 0;
-      text-align: center;
-    }
+.example__costs-amount{
+  margin: 0 0 20px 0;
+  text-align: center;
 }
