--- a/source/sass/blocks/main/extra-goods.scss
+++ b/source/sass/blocks/main/extra-goods.scss
@@ -1,17 +1,17 @@
 .extra-goods{
 
-    &__title{
-      margin: 0;
-      padding-bottom: 36px;
-      font-size: 24px;
-      line-height: 24px;
-      font-weight: 400;
-    }
-
-    &__list{
-      padding: 0;
-      margin: 0;
-      list-style-type: none;
-    }
 }
 
+.extra-goods__title{
+  margin: 0;
+  padding-bottom: 36px;
+  font-size: 24px;
+  line-height: 24px;
+  font-weight: 400;
+}
+
+.extra-goods__list{
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
