--- a/source/sass/blocks/main/form-additionally.scss
+++ b/source/sass/blocks/main/form-additionally.scss
@@ -1,35 +1,48 @@
 .form-additionally{
   display: flex;
   flex-direction: column;
+}
 
-    &__title{
-      font-size: 24px;
-      line-height: 24px;
-      font-weight: 400;
-      padding: 11px 0 34px;
+.form-additionally__title{
+  font-size: 24px;
+  line-height: 24px;
+  font-weight: 400;
+  padding: 11px 0 34px;
+  width: 100%;
+  position: relative;
+
+    &::after{
+      position: absolute;
+      content: "";
+      display: block;
+      background-color: $basic-green;
+      width: 136px;
+      height: 2px;
+      right: -20px;
+      top: 25px;
     }
+}
 
-    &__list{
-      padding: 0;
-      margin: 0;
-      list-style-type: none;
-      padding-bottom: 34px;
-      display: flex;
-      flex-direction: column;
-      gap: 12px;
-    }
+.form-additionally__list{
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+  padding-bottom: 34px;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
 
-    &__item{
-      font: inherit;
-      font-size: 16px;
-      text-transform: uppercase;
-    }
+.form-additionally__item{
+  font: inherit;
+  font-size: 16px;
+  text-transform: uppercase;
+}
 
-    &__control-input{
+.form-additionally__control-input{
 
-    }
+}
 
-    &__control-label{
+.form-additionally__control-label{
 
-    }
 }
