--- a/source/sass/blocks/main/program-type.scss
+++ b/source/sass/blocks/main/program-type.scss
@@ -1,24 +1,22 @@
 .program-type{
   padding: 22px 0 19px;
+}
 
-    &__list{
-      padding: 0;
-      margin: 0;
-      list-style-type: none;
-      display: flex;
-      flex-direction: column;
-      gap: 12px;
-    }
+.program-type__list{
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
 
-    &__item{
+.program-type__item{
 
+}
 
-    }
-
-    &__control-label{
-      font-size: 16px;
-      text-transform: uppercase;
-      color: #222222;
-    }
-
+.program-type__control-label{
+  font-size: 16px;
+  text-transform: uppercase;
+  color: $special-dark-gray-2;
 }
