--- a/source/sass/blocks/main/special-offer.scss
+++ b/source/sass/blocks/main/special-offer.scss
@@ -1,29 +1,30 @@
 .special-offer{
 
-    &__content-wrapper{
-      background-image: linear-gradient(rgba(104, 183, 56, 0.85),
+}
+
+.special-offer__content-wrapper{
+  background-image: linear-gradient(rgba(104, 183, 56, 0.85),
                                     rgba(104, 183, 56, 0.85)),
-                    url(../img/special-offer-background.jpg);
-      background-repeat: no-repeat;
-      height: 290px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin: 35px 0;
-    }
+                url(../img/special-offer-background.jpg);
+  background-repeat: no-repeat;
+  min-height: 290px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 35px 0;
+}
 
-    &__image-gift{
-      margin-top: 59px;
-    }
+.special-offer__image-gift{
+  margin-top: 59px;
+}
 
-    &__description{
-      font-family: 'Arial';
-      font-weight: 400;
-      font-size: 16px;
-      line-height: 20px;
-      color: #FFFFFF;
-      text-align: center;
-      margin: 0;
-      padding: 48px 61px 0 58px;
-    }
+.special-offer__description{
+  font-family: "Arial";
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  color: $white;
+  text-align: center;
+  margin: 0;
+  padding: 48px 61px 0 58px;
 }
