--- a/source/sass/page.scss
+++ b/source/sass/page.scss
@@ -1,26 +1,40 @@
-.page{
+.page {
   height: 100%;
-  background-color: #E5E5E5;
-
-
-    &__body{
-      font-family: "Oswald", "Arial", sans-serif;
-      font-size: 14px;
-      line-height: 18px;
-      font-weight: 400;
-      padding: 0;
-      margin: 0 auto;
-      width: 320px;
-      min-height: 100%;
-      color: #000000;
-      display: flex;
-    flex-direction: column;
-    background-color: #FFFFFF;
-    }
+  background-color: $basic-gray-2;
 }
+
+.page__body {
+  font-family: "Oswald", "Arial", sans-serif;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 400;
+  padding: 0;
+  margin: 0 auto;
+  width: 320px;
+  color: #000000;
+  background-color: $white;
+}
+
+  @media (min-width: $tablet-width) {
+    .page__body {
+      min-width: $tablet-width;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    .page__body {
+      min-width: $desktop-width;
+    }
+  }
+
 
 *,
 *::before,
 *::after {
   box-sizing: border-box;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
