--- a/source/sass/blocks/main/card.scss
+++ b/source/sass/blocks/main/card.scss
@@ -1,6 +1,7 @@
 .card {
   display: flex;
   flex-direction: column;
+  padding: 20px 0 25px;
 }
 
 .card__content-wrapper{
@@ -12,11 +13,6 @@
 .card__image-wrapper{
   margin: 0 auto;
   padding-top: 14px;
-}
-
-.card__info-wrapper{
-  display: flex;
-  flex-direction: column;
 }
 
 .card__title{
@@ -39,3 +35,49 @@
   line-height: 16px;
   color: $special-dark-gray;
 }
+
+@media (min-width: $tablet-width) {
+  .card {
+    padding: 161px 38px 39px;
+    background-color: $basic-gray;
+    min-width: 324px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+  }
+
+  .card__content-wrapper{
+    grid-template-columns: none;
+    padding-bottom: 33px;
+  }
+
+  .card__image-wrapper{
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 303px;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+  }
+
+  .card__title{
+    margin: 0 auto;
+    font-size: 20px;
+    line-height: 24px;
+    text-align: center;
+    padding-bottom: 14px;
+    width: 150px;
+  }
+
+  .card__description{
+    font-size: 16px;
+    padding: 7px 0 9px;
+    border-bottom: 1px solid $special-gray;
+  }
+}
+
+
