--- a/source/sass/blocks/main/catalog.scss
+++ b/source/sass/blocks/main/catalog.scss
@@ -6,13 +6,25 @@
   padding: 0;
   margin: 0;
   list-style-type: none;
-  display: grid;
+
 }
 
 .catalog__title{
-    padding-bottom: 40px;
+  padding-bottom: 40px;
 }
 
 .catalog__item{
-  padding: 20px 0 25px;
+  margin: 0 auto;
+}
+
+@media (min-width: $tablet-width) {
+  .catalog__list{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 141px 60px;
+  }
+
+  .catalog__title{
+    padding: 27px 0 163px;
+  }
 }
