--- a/source/sass/blocks/main/cooperation.scss
+++ b/source/sass/blocks/main/cooperation.scss
@@ -5,8 +5,8 @@
 }
 
 .cooperation__wrapper{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  display: flex;
+  justify-content: space-between;
   gap: 2px;
   padding: 26px 0;
 }
@@ -31,3 +31,24 @@
   display: block;
 }
 
+@media (min-width: $tablet-width) {
+  .cooperation__wrapper{
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .cooperation__title{
+    font-size: 20px;
+    line-height: 26px;
+    width: 175px;
+  }
+
+  .cooperation__address{
+    text-align: right;
+    font-size: 16px;
+    width: 160px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+}
