--- a/source/sass/blocks/main/features.scss
+++ b/source/sass/blocks/main/features.scss
@@ -14,12 +14,14 @@
   grid-template-columns: 1fr;
   gap: 20px;
   padding-bottom: 49px;
+
 }
 
 .features__item{
   display: grid;
   grid-template-columns: 60px 1fr;
   gap: 21px;
+
 }
 
 .features__item::before{
@@ -41,6 +43,7 @@
   .features__list{
     grid-template-columns: 1fr 1fr;
     gap: 37px 65px;
+    counter-reset: features-counter;
   }
 
   .features__item{
@@ -49,7 +52,7 @@
     padding: 40px 0 57px;
     margin-right: 76px;
     gap: 31px;
-
+    position: relative;
   }
 
   .features__item::before{
@@ -57,9 +60,22 @@
     height: 80px;
   }
 
+  .features__item::after{
+    counter-increment: features-counter;
+    content: counter(features-counter);
+    position: absolute;
+    font-size: 280px;
+    line-height: 280px;
+    font-weight: 400;
+    color: $basic-gray;
+    right: 0;
+    top: 0;
+  }
+
   .features__description{
     font-size: 16px;
     line-height: 24px;
     padding: 0;
+    z-index: 2;
   }
 }
