--- a/source/sass/page.scss
+++ b/source/sass/page.scss
@@ -10,7 +10,7 @@
   font-weight: 400;
   padding: 0;
   margin: 0 auto;
-  width: 320px;
+  min-width: 320px;
   color: #000000;
   background-color: $white;
 }
