--- a/source/sass/blocks/main/card-show-more.scss
+++ b/source/sass/blocks/main/card-show-more.scss
@@ -4,6 +4,8 @@
 
 .card-show-more__image{
   margin: 5px auto 0;
+  display: block;
+  text-align: center;
 }
 
 .card-show-more__title{
@@ -30,17 +32,27 @@
   .card-show-more{
     background-color: $white;
     outline: 2px solid $basic-gray;
+    padding-top: 52px;
+  }
+
+  .card-show-more__image{
+    margin: 0 auto 49px;
+
   }
 
   .card-show-more__title{
     font-size: 20px;
     line-height: 22px;
-
+    margin-bottom: 23px;
+    padding: 0;
   }
 
   .card-show-more__description{
     font-size: 16px;
     line-height: 18px;
+    margin-bottom: 87px;
+    padding-bottom: 0;
+
 
   }
 }
