--- a/source/sass/blocks/main/catalog.scss
+++ b/source/sass/blocks/main/catalog.scss
@@ -22,6 +22,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 141px 60px;
+    padding-bottom: 60px;
   }
 
   .catalog__title{
