--- a/source/sass/blocks/main/extra-goods-item.scss
+++ b/source/sass/blocks/main/extra-goods-item.scss
@@ -1,9 +1,3 @@
-.extra-goods-item{
-  display: flex;
-  flex-direction: column;
-  margin: 0;
-}
-
 .extra-goods-item__title{
   margin: 0;
   padding: 13px 0;
@@ -12,6 +6,12 @@
   font-weight: 400;
   text-transform: uppercase;
   color: $special-dark-gray-2;
+}
+
+.extra-goods-item{
+  display: flex;
+  flex-direction: column;
+  margin: 0;
 }
 
 .extra-goods-item__description{
@@ -30,3 +30,47 @@
 .extra-goods-item__button{
   margin-bottom: 19px;
 }
+
+@media (min-width: $tablet-width) {
+
+  .extra-goods-item {
+    padding: 26px 38px 28px;
+
+    &:not(:last-child){
+      border-bottom: 1px solid $special-gray;
+    }
+  }
+
+  .extra-goods-item__content-wrapper{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 21px;
+  }
+
+  .extra-goods-item__title{
+
+    padding: 0;
+    font-size: 20px;
+    line-height: 20px;
+
+  }
+
+  .extra-goods-item__description{
+    padding-bottom: 0;
+
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  .extra-goods-item__value{
+    margin-left: 49px;
+    padding-bottom: 0;
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  .extra-goods-item__button{
+    margin-bottom: 0;
+  }
+}
+
