--- a/source/sass/blocks/main/stats-list.scss
+++ b/source/sass/blocks/main/stats-list.scss
@@ -1,23 +1,35 @@
 .stats-list{
   display: flex;
+  gap: 32px;
 }
 
 .stats-list__item{
-  margin: 0;
+  margin: 0 0 34px;
   width: 50%;
   text-align: center;
+  outline: 1px solid $special-gray;
+  border-radius: 3px;
+  position: relative;
+
 }
 
 .stats-list__number{
   margin: 0;
   font-size: 24px;
   line-height: 24px;
-
+  padding: 15px 0 17px;
 }
 
 .stats-list__description{
   font-family: "Arial";
   font-size: 12px;
   line-height: 12px;
-  margin: 0 0 20px 0;
+  position: absolute;
+  z-index: 1;
+  left: 18px;
+  bottom: -13px;
+  color: $special-dark-gray;
+  margin: 0;
+  width: 87px;
+  background-color: $basic-gray-3;
 }
