--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -4,8 +4,9 @@ $basic-gray:  #F2F2F2;
 $basic-gray-2: #E5E5E5;
 $basic-gray-3: #EAEAEA;
 $basic-gray-4: #E7E7E7;
-$special-gray-2: #EBEBEB;
 $special-gray: #CDCDCD;
+$special-gray-2: #EBEBEB;
+$special-gray-3: #C4C4C4;
 $border-gray: #D9D9D9;
 $border-gray-2: #E6E6E6;
 $special-gray-3: #666666;
