--- a/source/sass/blocks/main/features.scss
+++ b/source/sass/blocks/main/features.scss
@@ -40,6 +40,10 @@
 }
 
 @media (min-width: $tablet-width) {
+  .features{
+    border-bottom: 1px solid $border-gray-2;
+  }
+
   .features__list{
     grid-template-columns: 1fr 1fr;
     gap: 37px 65px;
