--- a/source/sass/blocks/main/card.scss
+++ b/source/sass/blocks/main/card.scss
@@ -56,12 +56,13 @@
     position: absolute;
     left: 0;
     right: 0;
-    bottom: 303px;
+    bottom: 0;
     padding: 0;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     align-items: center;
+    transform: translateY(-303px);
   }
 
   .card__title{
