начало стилизации страницы формы для планшета1

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -31,6 +31,7 @@
 @import "./blocks/main/form-contact.scss";
 @import "./blocks/main/form-comment.scss";
 @import "./blocks/main/form-additionally.scss";
+@import "./blocks/main/details.scss";
 
 @import "./blocks/footer/main-footer.scss";
 @import "./blocks/footer/social-list.scss";
