--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,6 +5,7 @@
 @import "./page.scss";
 
 @import "./blocks/button.scss";
+@import "./blocks/page-title.scss";
 @import "./blocks/section-title.scss";
 @import "./blocks/global/container-content.scss";
 
