--- a/source/sass/blocks/header/site-list.scss
+++ b/source/sass/blocks/header/site-list.scss
@@ -8,6 +8,7 @@
   left: 0;
   min-width: 100%;
   background-color: $white;
+  display: none;
 
   &:last-child{
     border-bottom: 1px solid $border-gray-2;
