--- a/source/sass/blocks/main/card.scss
+++ b/source/sass/blocks/main/card.scss
@@ -40,7 +40,8 @@
   .card {
     padding: 161px 38px 39px;
     background-color: $basic-gray;
-    min-width: 324px;
+    max-width: 324px;
+    width: 100%;
     position: relative;
     display: flex;
     flex-direction: column;
