--- a/source/sass/blocks/main/catalog.scss
+++ b/source/sass/blocks/main/catalog.scss
@@ -1,16 +1,11 @@
-.catalog{
-
-}
-
 .catalog__list{
   padding: 0;
   margin: 0;
   list-style-type: none;
-
 }
 
 .catalog__title{
-  padding-bottom: 40px;
+  padding: 0;
 }
 
 .catalog__item{
@@ -22,10 +17,22 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 141px 60px;
-    padding-bottom: 60px;
+    padding: 80px 0 60px;
   }
 
   .catalog__title{
-    padding: 27px 0 163px;
+    padding: 27px 0 83px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .catalog__list{
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 143px 80px;
+    padding: 80px 0 60px;
+  }
+
+  .catalog__title{
+    padding: 27px 0 83px;
   }
 }
