--- a/source/sass/blocks/main/extra-goods-item.scss
+++ b/source/sass/blocks/main/extra-goods-item.scss
@@ -9,8 +9,7 @@
 }
 
 .extra-goods-item{
-  display: flex;
-  flex-direction: column;
+  display: grid;
   margin: 0;
 }
 
@@ -19,7 +18,7 @@
   display: flex;
   justify-content: space-between;
   padding-bottom: 15px;
-  font-family: Arial;
+  font-family: "Arial";
   line-height: 14px;
 }
 
@@ -32,7 +31,6 @@
 }
 
 @media (min-width: $tablet-width) {
-
   .extra-goods-item {
     padding: 26px 38px 28px;
 
@@ -74,3 +72,10 @@
   }
 }
 
+@media (min-width: $desktop-width){
+  .extra-goods-item {
+    display: grid;
+    grid-template-columns: 1fr 244px;
+    padding: 26px 0 28px;
+  }
+}
