--- a/source/sass/blocks/main/program-type.scss
+++ b/source/sass/blocks/main/program-type.scss
@@ -6,9 +6,8 @@
   padding: 0;
   margin: 0;
   list-style-type: none;
-  display: flex;
-  flex-direction: column;
-  gap: 12px;
+  display: grid;
+  gap: 13px;
 }
 
 .program-type__item{
@@ -16,7 +15,17 @@
 }
 
 .program-type__control-label{
-  font-size: 16px;
   text-transform: uppercase;
   color: $special-dark-gray-2;
+}
+
+@media (min-width: $tablet-width){
+  .program-type{
+    padding: 22px 0 19px;
+  }
+
+  .program-type__list{
+    padding: 30px;
+    outline: 1px solid $basic-gray-4;
+  }
 }
